--- a/content/blog/Intent-Based-Architecture-in-DeFi/index.yml
+++ b/content/blog/Intent-Based-Architecture-in-DeFi/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: 'Intent-Based Architecture in DeFi: A Game-Changer for On-Chain Trading'
+image: /assets/img/blog/Intent-Based-Architecture-in-DeFi/bg.png
 gdpr:
   - /_shared/gdpr/index.md
