--- a/content/blog/Lumia-Role-in-Orbs-Liquidity-Hub/index.yml
+++ b/content/blog/Lumia-Role-in-Orbs-Liquidity-Hub/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: 'Pioneering DeFi Efficiency: Lumia’s Role in Orbs Liquidity Hub'
+image: /assets/img/blog/Lumia-Role-in-Orbs-Liquidity-Hub/bg.png
 gdpr:
   - /_shared/gdpr/index.md
