--- a/content/blog/Orbs-Liquidity-Hub-Expands-to-Sonic-via-SwapX/index.yml
+++ b/content/blog/Orbs-Liquidity-Hub-Expands-to-Sonic-via-SwapX/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: 'Orbs Liquidity Hub Expands to Sonic via SwapX'
+image: /assets/img/blog/Orbs-Liquidity-Hub-Expands-to-Sonic-via-SwapX/bg.jpg
 gdpr:
   - /_shared/gdpr/index.md
