--- a/content/blog/Pancakeswap-expands-dTWAP-to-Arbitrum-Linea-and-base/index.yml
+++ b/content/blog/Pancakeswap-expands-dTWAP-to-Arbitrum-Linea-and-base/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Pancakeswap expands dTWAP & dLIMIT to Arbitrum, Linea, and base!"
+image: /assets/img/blog/Pancakeswap-expands-dTWAP-to-Arbitrum-Linea-and-base/bg.jpg
 gdpr:
   - /_shared/gdpr/index.md
