--- a/content/blog/Orbs-Liquidity-Hub-Expands-Supported-Networks-on-SpookySwap-to-Include-Sonic/index.yml
+++ b/content/blog/Orbs-Liquidity-Hub-Expands-Supported-Networks-on-SpookySwap-to-Include-Sonic/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: 'Orbs Liquidity Hub Expands Supported Networks on SpookySwap to Include Sonic'
+image: /assets/img/blog/Orbs-Liquidity-Hub-Expands-Supported-Networks-on-SpookySwap-to-Include-Sonic/bg.png
 gdpr:
   - /_shared/gdpr/index.md
