--- a/content/blog/Orbs-Perpetual-Hub-Integrates-with-Xpanse/index.yml
+++ b/content/blog/Orbs-Perpetual-Hub-Integrates-with-Xpanse/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Orbs Perpetual Hub Integrates with Xpanse: Enhancing Decentralized Derivatives Trading"
+image: /assets/img/blog/Orbs-Perpetual-Hub-Integrates-with-Xpanse/bg.png
 gdpr:
   - /_shared/gdpr/index.md
