--- a/content/blog/DragonSwap-Integrates-Limit-DCA-Orders-Powered-by-Orbs/index.yml
+++ b/content/blog/DragonSwap-Integrates-Limit-DCA-Orders-Powered-by-Orbs/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "DragonSwap Integrates Limit & DCA Orders Powered by Orbs"
+image: /assets/img/blog/DragonSwap-Integrates-Limit-DCA-Orders-Powered-by-Orbs/bg.png
 gdpr:
   - /_shared/gdpr/index.md
