--- a/content/blog/Orbs Perpetual Hub Integrates with IVX/index.yml
+++ b/content/blog/Orbs Perpetual Hub Integrates with IVX/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Orbs Perpetual Hub Integrates with IVX: Enhancing Decentralized Derivatives Trading"
+image: /assets/img/blog/Orbs Perpetual Hub Integrates with IVX/bg.png
 gdpr:
   - /_shared/gdpr/index.md
