--- a/content/blog/SwapX-Integrates-Limit-dTWAP-Orders-Powered-by-Orbs/index.yml
+++ b/content/blog/SwapX-Integrates-Limit-dTWAP-Orders-Powered-by-Orbs/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "SwapX Integrates Limit & dTWAP Orders Powered by Orbs"
+image: /assets/img/blog/SwapX-Integrates-Limit-dTWAP-Orders-Powered-by-Orbs/bg.png
 gdpr:
   - /_shared/gdpr/index.md
