--- a/content/blog/Orbs-staking-wallet-Tetra-listed-on-Binance-Wallet/index.yml
+++ b/content/blog/Orbs-staking-wallet-Tetra-listed-on-Binance-Wallet/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Orbs staking wallet Tetra listed on Binance Wallet"
+image: /assets/img/blog/Orbs-staking-wallet-Tetra-listed-on-Binance-Wallet/bg.png
 gdpr:
   - /_shared/gdpr/index.md
