updated blog title

--- a/content/blog/Orbs-Perpetual-Hub-Integrates-with-PriveX-Enhancing-Decentralized-Security-First-Derivatives-Trading-on-COTI/index.yml
+++ b/content/blog/Orbs-Perpetual-Hub-Integrates-with-PriveX-Enhancing-Decentralized-Security-First-Derivatives-Trading-on-COTI/index.yml
@@ -10,7 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: "Orbs Perpetual Hub Integrates with PriveX: Enhancing Decentralized Security First Derivatives Trading on COTI"
+title: "Orbs Integrates with PriveX to Bring Security First Perpetuals to COTI"
 image: /assets/img/blog/Orbs-Perpetual-Hub-Integrates-with-PriveX-Enhancing-Decentralized-Security-First-Derivatives-Trading-on-COTI/image2.png
 gdpr:
   - /_shared/gdpr/index.md
