fix blog page title

--- a/content/blog/Orbs-Liquidity-Hub-Expands-Supported-Networks-on-QuickSwap-to-Include-Base/index.yml
+++ b/content/blog/Orbs-Liquidity-Hub-Expands-Supported-Networks-on-QuickSwap-to-Include-Base/index.yml
@@ -10,7 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: "SparkDEX integrates dTWAP and dLIMIT on Flare!"
+title: "Orbs Liquidity Hub Expands Supported Networks on QuickSwap to Include Base!"
 image: /assets/img/blog/Orbs-Liquidity-Hub-Expands-Supported-Networks-on-QuickSwap-to-Include-Base/image1.png
 gdpr:
   - /_shared/gdpr/index.md
