--- a/content/blog/Kodiak-Finance-integrates-Orbs-dTWAP-and-dLimit-orders-on-Berachain/index.yml
+++ b/content/blog/Kodiak-Finance-integrates-Orbs-dTWAP-and-dLimit-orders-on-Berachain/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Kodiak Finance integrates Orbs’ dTWAP and dLimit orders on Berachain!"
+image: /assets/img/blog/Kodiak-Finance-integrates-Orbs-dTWAP-and-dLimit-orders-on-Berachain/bg.png
 gdpr:
   - /_shared/gdpr/index.md
