--- a/content/blog/Introducing-dSLTP-The-First-Stop-Loss-Take-Profit-Solution-for-DeFi/index.yml
+++ b/content/blog/Introducing-dSLTP-The-First-Stop-Loss-Take-Profit-Solution-for-DeFi/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Introducing dSLTP: The First Stop-Loss & Take-Profit Solution for DeFi"
+image: /assets/img/blog/Introducing-dSLTP-The-First-Stop-Loss-Take-Profit-Solution-for-DeFi/bg.png
 gdpr:
   - /_shared/gdpr/index.md
