update dao blog title

--- a/content/blog/Reflections-on-Orbs-DAO-and-What-Comes-Next/index.yml
+++ b/content/blog/Reflections-on-Orbs-DAO-and-What-Comes-Next/index.yml
@@ -10,7 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: 'Reflections on Orbs, DAO, and What Comes Next'
+title: 'Reflections on Orbs, DAO, Tokenomics and What Comes Next'
 image: /assets/img/blog/What-is-Orbs/bg.png
 gdpr:
   - /_shared/gdpr/index.md
