--- a/content/blog/THENA-Integrates-dSLTP/index.yml
+++ b/content/blog/THENA-Integrates-dSLTP/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "THENA Integrates dSLTP: Bringing Decentralized Stop-Loss & Take-Profit Orders to BNB Chain"
+image: /assets/img/blog/THENA-Integrates-dSLTP/bg.png
 gdpr:
   - /_shared/gdpr/index.md
