--- a/content/blog/SpookySwap-Integrates-dSLTP/index.yml
+++ b/content/blog/SpookySwap-Integrates-dSLTP/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "SpookySwap Integrates dSLTP: Bringing Decentralized Stop-Loss & Take-Profit Orders to Sonic!"
+image: /assets/img/blog/SpookySwap-Integrates-dSLTP/bg2.png
 gdpr:
   - /_shared/gdpr/index.md
