--- a/content/blog/Gryps-Integrates-Orbs-Perpetual-Hub/index.yml
+++ b/content/blog/Gryps-Integrates-Orbs-Perpetual-Hub/index.yml
@@ -10,6 +10,7 @@ subscribe:
   - /_shared/subscribe/subscribe.md
 meta_description: 
 meta_keywords: 
-title: Orbs and Krystal Announce a Partnership Focused on DeFi
+title: "Gryps Integrates Orbs Perpetual Hub to Power Institutional Perpetuals on Sei"
+image: /assets/img/blog/Gryps-Integrates-Orbs-Perpetual-Hub/bg.png
 gdpr:
   - /_shared/gdpr/index.md
